<refactor>: 删除无关代码，关于WorkflowJobSummarySchedule.java中关于doExecute()的方法存在sql异常未处理